--- a/ACI_Assignment_1_Solution.ipynb
+++ b/ACI_Assignment_1_Solution.ipynb
@@ -89,7 +89,36 @@
       },
       "outputs": [],
       "source": [
-        "#Code Block : Set Initial State (Must handle dynamic inputs)"
+        "#Code Block : Set Initial State (Must handle dynamic inputs)\n",
+        "import heapq\n",
+        "graph = {\n",
+        "'A': ['B', 'C', 'D'],\n",
+        "'B': ['A', 'E', 'F'],\n",
+        "'C': ['A', 'G', 'H'],\n",
+        "'D': ['A', 'I', 'J'],\n",
+        "'E': ['B', 'K', 'L'],\n",
+        "'F': ['B', 'M', 'N'],\n",
+        "'G': ['C', 'O', 'P'],\n",
+        "'H': ['C', 'Q', 'R'],\n",
+        "'I': ['D', 'S', 'T'],\n",
+        "'J': ['D', 'U', 'V'],\n",
+        "'K': ['E', 'W', 'X'],\n",
+        "'L': ['E', 'Y', 'Z'],\n",
+        "'M': ['F', 'H', 'I'],\n",
+        "'N': ['F', 'J', 'K'],\n",
+        "'O': ['G', 'L', 'M'],\n",
+        "'P': ['G', 'N', 'O'],\n",
+        "'Q': ['H', 'P', 'Q'],\n",
+        "'R': ['H', 'R', 'S'],\n",
+        "'S': ['I', 'T', 'U'],\n",
+        "'T': ['I', 'V', 'W'],\n",
+        "'U': ['J', 'X', 'Y'],\n",
+        "'V': ['J', 'Z', 'A'],\n",
+        "'W': ['K', 'B', 'C'],\n",
+        "'X': ['K', 'D', 'E'],\n",
+        "'Y': ['L', 'F', 'G'],\n",
+        "'Z': ['L', 'H', 'I']\n",
+        "}"
       ]
     },
     {
@@ -100,7 +129,26 @@
       },
       "outputs": [],
       "source": [
-        "#Code Block : Set the matrix for transition & cost (as relevant for the given problem)"
+        "#Code Block : Set the matrix for transition & cost (as relevant for the given problem)\n",
+        "def heuristic(node, goal):\n",
+        "    x1, y1 = node\n",
+        "    x2, y2 = goal\n",
+        "    manhattan = abs(x1 - x2) + abs(y1 - y2)\n",
+        "    color_penalty = 5 if node[0] != goal[0] else -5\n",
+        "    return manhattan + color_penalty\n",
+        "\n",
+        "def cost(current, neighbor, agent):\n",
+        "    if agent == 'R1':\n",
+        "    if neighbor[0] == 'G':\n",
+        "    return 10\n",
+        "    elif neighbor[0] == 'R':\n",
+        "    return -10\n",
+        "    elif agent == 'G1':\n",
+        "    if neighbor[0] == 'R':\n",
+        "    return 10\n",
+        "    elif neighbor[0] == 'G':\n",
+        "    return -10\n",
+        "    return 1"
       ]
     },
     {
@@ -111,7 +159,40 @@
       },
       "outputs": [],
       "source": [
-        "#Code Block : Write function to design the Transition Model/Successor function. Ideally this would be called while search algorithms are implemented"
+        "#Code Block : Write function to design the Transition Model/Successor function. Ideally this would be called while search algorithms are implemented\n",
+        "def a_star_search(start, goal, graph, heuristic):\n",
+        "# Create a priority queue to store the unexplored nodes\n",
+        "frontier = []\n",
+        "# Push the start node into the priority queue with a cost of 0\n",
+        "heapq.heappush(frontier, (0, start))\n",
+        "# Create a dictionary to store the costs of the nodes\n",
+        "costs = {start: 0}\n",
+        "# Create a dictionary to store the parents of the nodes\n",
+        "parents = {start: None}\n",
+        "# Create a variable to store the optimal path\n",
+        "path = []\n",
+        "# Loop until the priority queue is empty\n",
+        "while frontier:\n",
+        "# Pop the node with the lowest cost from the priority queue\n",
+        "current_cost, current_node = heapq.heappop(frontier)\n",
+        "# If the current node is the goal node, construct the path and return it\n",
+        "if current_node == goal:\n",
+        "while current_node is not None:\n",
+        "path.append(current_node)\n",
+        "current_node = parents[current_node]\n",
+        "return path[::-1]\n",
+        "# Iterate through the neighbors of the current node\n",
+        "for neighbor in graph[current_node]:\n",
+        "# Calculate the cost of reaching the neighbor from the start node\n",
+        "cost = costs[current_node] + 1\n",
+        "# If the neighbor has not been explored or the new cost is lower than the previous cost, update the cost and parent of the neighbor\n",
+        "if neighbor not in costs or cost < costs[neighbor]:\n",
+        "costs[neighbor] = cost\n",
+        "priority = cost + heuristic(neighbor, goal)\n",
+        "heapq.heappush(frontier, (priority, neighbor))\n",
+        "parents[neighbor] = current_node\n",
+        "# If the priority queue is empty, return an empty path\n",
+        "return path"
       ]
     },
     {
