Added Images and Initial header

--- a/ACI_Assignment_1_Solution.ipynb
+++ b/ACI_Assignment_1_Solution.ipynb
@@ -62,12 +62,36 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "xTAkkRECFyud"
       },
       "source": [
-        "List the PEAS decription of the problem here in this markdown block"
+        "There are two agents named R1 and G1. Both are searching for a \"heart\" as shown in the\n",
+        "below configuration as “H” that gives everlasting power. Both agents are trying to reach the\n",
+        "heart. In this process many obstacles may be encountered to reach the heart. Help them in\n",
+        "finding the best path to reach the heart from any arbitrary start positions. [Dynamically fetch\n",
+        "the start position while executing the code]\n",
+        "\n",
+        "For the agent R1 the obstacle is the green room. If R1 enters the green room it incurs a\n",
+        "penalty of +10 cost and if it uses the red room it incurs a penalty of -10 points. For the agent\n",
+        "G1 the obstacle is the red room. If G1 enters the red room it incurs a penalty of +10 cost and\n",
+        "if it uses the green room it incurs a penalty of -10 points. In addition to the given cost, for\n",
+        "every transition an agent visits incurs a path cost of 1.\n",
+        "For any arbitrary node “n” the heuristic to reach the Heart h(n) is given by the below:\n",
+        "Manhattan distance + Color Penalty\n",
+        "\n",
+        "where, Color Penalty = +5 if the node “n” and goal node is in different colored room\n",
+        "and Color Penalty = -5 if the node “n” and goal node is in same colored room\n",
+        "Use the Greedy Best First Search algorithm for both the below configurations and interpret\n",
+        "which agent works well in which environment. Justify your interpretation with relevant\n",
+        "performance metrics.\n",
+        "\n",
+        "Note: The agents are not competing with each other. You need to run the simulation for both\n",
+        "agents in each of the below scenarios separately & submit the results of 4 runs.\n",
+        "\n",
+        "<img src=\"files/AssignmentImage.png\">\n"
       ]
     },
     {
