--- a/ACI_Assignment_1_Solution.ipynb
+++ b/ACI_Assignment_1_Solution.ipynb
@@ -107,14 +107,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "2MAHnXD1Fyud"
       },
       "outputs": [],
       "source": [
         "#Code Block : Set Initial State (Must handle dynamic inputs)\n",
-        "import heapq\n",
+        "import heapq"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "3DzivjiGFyue"
+      },
+      "outputs": [],
+      "source": [
+        "#Code Block : Set the matrix for transition & cost (as relevant for the given problem)\n",
         "graph = {\n",
         "'A': ['B', 'C', 'D'],\n",
         "'B': ['A', 'E', 'F'],\n",
@@ -149,74 +160,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "3DzivjiGFyue"
-      },
-      "outputs": [],
-      "source": [
-        "#Code Block : Set the matrix for transition & cost (as relevant for the given problem)\n",
-        "def heuristic(node, goal):\n",
-        "    x1, y1 = node\n",
-        "    x2, y2 = goal\n",
-        "    manhattan = abs(x1 - x2) + abs(y1 - y2)\n",
-        "    color_penalty = 5 if node[0] != goal[0] else -5\n",
-        "    return manhattan + color_penalty\n",
-        "\n",
-        "def cost(current, neighbor, agent):\n",
-        "    if agent == 'R1':\n",
-        "    if neighbor[0] == 'G':\n",
-        "    return 10\n",
-        "    elif neighbor[0] == 'R':\n",
-        "    return -10\n",
-        "    elif agent == 'G1':\n",
-        "    if neighbor[0] == 'R':\n",
-        "    return 10\n",
-        "    elif neighbor[0] == 'G':\n",
-        "    return -10\n",
-        "    return 1"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "X0dhW7_LFyue"
       },
       "outputs": [],
       "source": [
         "#Code Block : Write function to design the Transition Model/Successor function. Ideally this would be called while search algorithms are implemented\n",
-        "def a_star_search(start, goal, graph, heuristic):\n",
-        "# Create a priority queue to store the unexplored nodes\n",
-        "frontier = []\n",
-        "# Push the start node into the priority queue with a cost of 0\n",
-        "heapq.heappush(frontier, (0, start))\n",
-        "# Create a dictionary to store the costs of the nodes\n",
-        "costs = {start: 0}\n",
-        "# Create a dictionary to store the parents of the nodes\n",
-        "parents = {start: None}\n",
-        "# Create a variable to store the optimal path\n",
-        "path = []\n",
-        "# Loop until the priority queue is empty\n",
-        "while frontier:\n",
-        "# Pop the node with the lowest cost from the priority queue\n",
-        "current_cost, current_node = heapq.heappop(frontier)\n",
-        "# If the current node is the goal node, construct the path and return it\n",
-        "if current_node == goal:\n",
-        "while current_node is not None:\n",
-        "path.append(current_node)\n",
-        "current_node = parents[current_node]\n",
-        "return path[::-1]\n",
-        "# Iterate through the neighbors of the current node\n",
-        "for neighbor in graph[current_node]:\n",
-        "# Calculate the cost of reaching the neighbor from the start node\n",
-        "cost = costs[current_node] + 1\n",
-        "# If the neighbor has not been explored or the new cost is lower than the previous cost, update the cost and parent of the neighbor\n",
-        "if neighbor not in costs or cost < costs[neighbor]:\n",
-        "costs[neighbor] = cost\n",
-        "priority = cost + heuristic(neighbor, goal)\n",
-        "heapq.heappush(frontier, (priority, neighbor))\n",
-        "parents[neighbor] = current_node\n",
-        "# If the priority queue is empty, return an empty path\n",
-        "return path"
+        "def heuristic(node, goal):\n",
+        "    x1, y1 = node\n",
+        "    x2, y2 = goal\n",
+        "    manhattan = abs(x1 - x2) + abs(y1 - y2)\n",
+        "    color_penalty = 5 if node[0] != goal[0] else -5\n",
+        "    return manhattan + color_penalty"
       ]
     },
     {
@@ -227,7 +181,19 @@
       },
       "outputs": [],
       "source": [
-        "#Code block : Write fucntion to handle goal test (Must handle dynamic inputs). Ideally this would be called while search algorithms are implemented"
+        "#Code block : Write fucntion to handle goal test (Must handle dynamic inputs). Ideally this would be called while search algorithms are implemented\n",
+        "def cost(current, neighbor, agent):\n",
+        "    if agent == 'R1':\n",
+        "        if neighbor[0] == 'G':\n",
+        "            return 10\n",
+        "        elif neighbor[0] == 'R':\n",
+        "            return -10\n",
+        "    elif agent == 'G1':\n",
+        "        if neighbor[0] == 'R':\n",
+        "            return 10\n",
+        "        elif neighbor[0] == 'G':\n",
+        "            return -10\n",
+        "    return 1"
       ]
     },
     {
@@ -247,7 +213,40 @@
       },
       "outputs": [],
       "source": [
-        "#Code Block : Function for algorithm 1 implementation"
+        "#Code Block : Function for algorithm 1 implementation\n",
+        "def a_star_search(start, goal, graph, heuristic):\n",
+        "    # Create a priority queue to store the unexplored nodes\n",
+        "    frontier = []\n",
+        "    # Push the start node into the priority queue with a cost of 0\n",
+        "    heapq.heappush(frontier, (0, start))\n",
+        "    # Create a dictionary to store the costs of the nodes\n",
+        "    costs = {start: 0}\n",
+        "    # Create a dictionary to store the parents of the nodes\n",
+        "    parents = {start: None}\n",
+        "    # Create a variable to store the optimal path\n",
+        "    path = []\n",
+        "    # Loop until the priority queue is empty\n",
+        "    while frontier:\n",
+        "        # Pop the node with the lowest cost from the priority queue\n",
+        "        current_cost, current_node = heapq.heappop(frontier)\n",
+        "        # If the current node is the goal node, construct the path and return it\n",
+        "        if current_node == goal:\n",
+        "            while current_node is not None:\n",
+        "                path.append(current_node)\n",
+        "                current_node = parents[current_node]\n",
+        "                return path[::-1]\n",
+        "        # Iterate through the neighbors of the current node\n",
+        "        for neighbor in graph[current_node]:\n",
+        "            # Calculate the cost of reaching the neighbor from the start node\n",
+        "            cost = costs[current_node] + 1\n",
+        "            # If the neighbor has not been explored or the new cost is lower than the previous cost, update the cost and parent of the neighbor\n",
+        "            if neighbor not in costs or cost < costs[neighbor]:\n",
+        "                costs[neighbor] = cost\n",
+        "                priority = cost + heuristic(neighbor, goal)\n",
+        "                heapq.heappush(frontier, (priority, neighbor))\n",
+        "                parents[neighbor] = current_node\n",
+        "                # If the priority queue is empty, return an empty path\n",
+        "                return path"
       ]
     },
     {
@@ -267,7 +266,40 @@
       },
       "outputs": [],
       "source": [
-        "#Code Block : Function for algorithm 2 implementation"
+        "#Code Block : Function for algorithm 2 implementation\n",
+        "# Define the start and goal nodes\n",
+        "start = 'A'\n",
+        "goal = 'H'\n",
+        "\n",
+        "# Define the graph as a dictionary\n",
+        "graph = {\n",
+        "    'A': ['B', 'C'],\n",
+        "    'B': ['A', 'D', 'E'],\n",
+        "    'C': ['A', 'F'],\n",
+        "    'D': ['B', 'G'],\n",
+        "    'E': ['B', 'G'],\n",
+        "    'F': ['C', 'G'],\n",
+        "    'G': ['D', 'E', 'F', 'H'],\n",
+        "    'H': ['G']\n",
+        "}\n",
+        "\n",
+        "# Define the heuristic function\n",
+        "def heuristic(node, goal):\n",
+        "    # Calculate the Manhattan distance between the node and the goal\n",
+        "    manhattan_distance = abs(node[0] - goal[0]) + abs(node[1] - goal[1])\n",
+        "    # Add the color penalty\n",
+        "    if node[2] != goal[2]:\n",
+        "        color_penalty = 5\n",
+        "    else:\n",
+        "        color_penalty = -5\n",
+        "    # Return the total heuristic cost\n",
+        "    return manhattan_distance + color_penalty\n",
+        "\n",
+        "# Run the A* search\n",
+        "path = a_star_search(start, goal, graph, heuristic)\n",
+        "\n",
+        "# Print the optimal path\n",
+        "print(f\"Optimal path: {path}\")\n"
       ]
     },
     {
