--- a/ACI_Assignment_1_Solution.ipynb
+++ b/ACI_Assignment_1_Solution.ipynb
@@ -91,7 +91,7 @@
         "Note: The agents are not competing with each other. You need to run the simulation for both\n",
         "agents in each of the below scenarios separately & submit the results of 4 runs.\n",
         "\n",
-        "<img src=\"~/files/AssignmentImage.png\">\n"
+        "<img src=\"/files/AssignmentImage.png\">\n"
       ]
     },
     {
