--- a/ACI_Assignment_1_Solution.ipynb
+++ b/ACI_Assignment_1_Solution.ipynb
@@ -268,7 +268,7 @@
       "source": [
         "#Code Block : Function for algorithm 2 implementation\n",
         "# Define the start and goal nodes\n",
-        "start = 'A'\n",
+        "start = 'B'\n",
         "goal = 'H'\n",
         "\n",
         "# Define the graph as a dictionary\n",
